replace List.of, Map.of with Collections.singleton